add video icons to all assist buttons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h1 class="page-title">New Pre-Call Plan</h1>
         </div>
         <div>
-          <button class="btn grey overlay-trigger" type="button" value="overlay-one">ASSIST</button>
+          <button class="btn grey overlay-trigger" type="button" value="overlay-one"><object class="mr-05" data="./icons/grey-video-icon.svg" width="14" height="8"></object>ASSIST</button>
           <div class="overlay" id="overlay-one">
             <iframe src="https://player.vimeo.com/video/820953292?h=f0457235b3" width="750" height="420" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
           </div>
@@ -40,7 +40,7 @@
         <div class="section-content">
             <div class="d-flex justify-between">
               <h3>Account context</h3>
-              <button class="btn orange overlay-trigger" type="button" value="overlay-two">ASSIST</button>
+              <button class="btn orange overlay-trigger" type="button" value="overlay-two"><object class="mr-05" data="./icons/orange-video-icon.svg" width="14" height="8"></object>ASSIST</button>
               <div class="overlay" id="overlay-two">
                 <iframe src="https://player.vimeo.com/video/809829380?h=8fe947ad9f" width="750" height="420" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
               </div>
@@ -75,7 +75,7 @@
               <div class="w-50 pr-1">
                 <div class="d-flex justify-between">
                   <h3>Meeting with</h3>
-                  <button class="btn orange overlay-trigger" type="button" value="overlay-three">ASSIST</button>
+                  <button class="btn orange overlay-trigger" type="button" value="overlay-three"><object class="mr-05" data="./icons/orange-video-icon.svg" width="14" height="8"></object>ASSIST</button>
                   <div class="overlay" id="overlay-three">
                     <iframe src="https://player.vimeo.com/video/809829435?h=230603999e" width="750" height="420" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                   </div>
@@ -103,7 +103,7 @@
               <div class="w-50 pl-1">
                 <div class="d-flex justify-between">
                   <h3>Our team and roles</h3>
-                  <button class="btn orange overlay-trigger" type="button" value="overlay-four">ASSIST</button>
+                  <button class="btn orange overlay-trigger" type="button" value="overlay-four"><object class="mr-05" data="./icons/orange-video-icon.svg" width="14" height="8"></object>ASSIST</button>
                   <div class="overlay" id="overlay-four">
                     <iframe src="https://player.vimeo.com/video/809829465?h=8a5eccaa44" width="750" height="420" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                   </div>
@@ -147,7 +147,7 @@
             <div class="w-50 pr-1">
               <div class="d-flex justify-between">
                 <h3>Key client contact motivation</h3>
-                <button class="btn blue overlay-trigger" type="button" value="overlay-five">ASSIST</button>
+                <button class="btn blue overlay-trigger" type="button" value="overlay-five"><object class="mr-05" data="./icons/blue-video-icon.svg" width="14" height="8"></object>ASSIST</button>
                 <div class="overlay" id="overlay-five">
                   <iframe src="https://player.vimeo.com/video/809828912?h=8b6ef6b99d" width="750" height="420" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </div>
@@ -176,7 +176,7 @@
             <div class="w-50 pl-1">
               <div class="d-flex justify-between">
                 <h3>Meeting Goals</h3>
-                <button class="btn blue overlay-trigger" type="button" value="overlay-six">ASSIST</button>
+                <button class="btn blue overlay-trigger" type="button" value="overlay-six"><object class="mr-05" data="./icons/blue-video-icon.svg" width="14" height="8"></object>ASSIST</button>
                 <div class="overlay" id="overlay-six">
                   <iframe src="https://player.vimeo.com/video/809829523?h=2697782685" width="750" height="420" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </div>
@@ -226,7 +226,7 @@
                         <span class="extra-space relative"><img src="./icons/i-green.svg" class="info-icon orange" alt="More info icon">
                           <p class="helper-text">Plan the Opening - a confident, concise first minute will dramatically increase the meeting's productivity. Use bullet points, not a script. Your opening may include the meeting purpose, a proposed agenda (including gaining permission to drive the meeting), any datapoints that give you leverage, and confirmation of time available.</p></span>:
                         </h3>
-                      <button class="btn green overlay-trigger" type="button" value="overlay-seven">ASSIST</button>
+                      <button class="btn green overlay-trigger" type="button" value="overlay-seven"><object class="mr-05" data="./icons/green-video-icon.svg" width="14" height="8"></object>ASSIST</button>
                       <div class="overlay" id="overlay-seven">
                         <iframe src="https://player.vimeo.com/video/809828968?h=893fdfde91" width="750" height="420" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                       </div>
@@ -245,7 +245,7 @@
                         <span class="extra-space relative"><img src="./icons/i-green.svg" class="info-icon green" alt="More info icon">
                           <p class="helper-text">After your opening statement, which steps will you require in this meeting? DISCOVER (exchanging info), PROPOSE (proposing an advance/next step), CLOSE (overcoming objections to gain agreement to the advance). Remember that you may not need every step in every meeting. e.g., if you have already exchanged all key information prior to a meeting, you may choose to skip the DISCOVER step and jump straight to PROPOSE.</p></span>:
                         </h3>
-                      <button class="btn green overlay-trigger" type="button" value="overlay-eight">ASSIST</button>
+                      <button class="btn green overlay-trigger" type="button" value="overlay-eight"><object class="mr-05" data="./icons/green-video-icon.svg" width="14" height="8"></object>ASSIST</button>
                       <div class="overlay" id="overlay-eight">
                         <iframe src="https://player.vimeo.com/video/809829574?h=0aeddc33e2" width="750" height="420" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                       </div>
@@ -283,7 +283,7 @@
                           <span class="extra-space relative"><img src="./icons/i-green.svg" class="info-icon green" alt="More info icon">
                             <p class="helper-text">Prioritize and distill the three most important questions to ask in this meeting. Focus on areas of leverage, where you can create and monetize value for the Client.</p></span>:
                           </h3>
-                        <button class="btn green overlay-trigger" type="button" value="overlay-nine">ASSIST</button>
+                        <button class="btn green overlay-trigger" type="button" value="overlay-nine"><object class="mr-05" data="./icons/green-video-icon.svg" width="14" height="8"></object>ASSIST</button>
                         <div class="overlay" id="overlay-nine">
                           <iframe src="https://player.vimeo.com/video/809829612?h=ed0e500d9a" width="750" height="420" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                         </div>
@@ -299,7 +299,7 @@
                           <span class="extra-space relative"><img src="./icons/i-green.svg" class="info-icon green" alt="More info icon">
                             <p class="helper-text">Prioritize and distill no more than 3 concise items of information or data to share with the Client in this meeting. Focus on information that gives you credibility /leverage and/or that manages Client expectations.</p></span>:
                           </h3>
-                        <button class="btn green overlay-trigger" type="button" value="overlay-ten">ASSIST</button>
+                        <button class="btn green overlay-trigger" type="button" value="overlay-ten"><object class="mr-05" data="./icons/green-video-icon.svg" width="14" height="8"></object>ASSIST</button>
                         <div class="overlay" id="overlay-ten">
                           <iframe src="https://player.vimeo.com/video/809829256?h=5287f15ad1" width="750" height="420" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                         </div>
@@ -337,7 +337,7 @@
                       <span class="extra-space relative"><img src="./icons/i-green.svg" class="info-icon green" alt="More info icon">
                         <p class="helper-text">Based on the meeting goals, what proposal would you like to be able to make in this meeting to secure the Advance you want? If you plan a proposal in advance, you are more likely to make it, and hence more likely to advance the ball.</p></span>:
                       </h3>
-                    <button class="btn green overlay-trigger" type="button" value="overlay-eleven">ASSIST</button>
+                    <button class="btn green overlay-trigger" type="button" value="overlay-eleven"><object class="mr-05" data="./icons/green-video-icon.svg" width="14" height="8"></object>ASSIST</button>
                     <div class="overlay" id="overlay-eleven">
                       <iframe src="https://player.vimeo.com/video/809829311?h=64e28b6732" width="750" height="420" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                     </div>
@@ -361,7 +361,7 @@
                       <span class="extra-space relative"><img src="./icons/i-green.svg" class="info-icon green" alt="More info icon">
                       <p class="helper-text">Prioritize and distill the 3 worst objections that you may get to your advance, and consider the best way to overcome these objections. Where possible, pre-empt likely objections before they are raised by the Client.</p></span>:
                     </h3>
-                    <button class="btn green overlay-trigger" type="button" value="overlay-twelve">ASSIST</button>
+                    <button class="btn green overlay-trigger" type="button" value="overlay-twelve"><object class="mr-05" data="./icons/green-video-icon.svg" width="14" height="8"></object>ASSIST</button>
                     <div class="overlay" id="overlay-twelve">
                       <iframe src="https://player.vimeo.com/video/809829340?h=8f3d43ec9b" width="750" height="420" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                     </div>
