--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               <input type="radio" name="tabs" id="tab1" checked="checked" />
               <label for="tab1" class="tab-heading">Launch
               </label>
-              <div class="tab">
+              <div class="tab pagebreak">
                 <div class="d-flex justify-between no-flex-on-print">
                   <div class="os-wrapper pr-1">
                     <div class="d-flex justify-between">
@@ -423,12 +423,19 @@
           </div>
         </div>
       </section>
-
     </div>
     <div class="generate-wrapper">
       <input type="button" value="Generate PDF" onclick="GeneratePdf()" class="btn grey"/>
     </div>
     </main>
+    <div class="private-notes">
+      <h3>Private Notes:</h3>
+        <hr>
+        <hr>
+        <hr>
+        <hr>
+        <hr>
+    </div>
     <div class="bottom">
       <div>
         <p class="mb-05"><strong>If you have any questions or suggestions, please feel free to email us directly at <a href="mailto:someone@@swaggersales.com">someone@@swaggersales.com</a>. <br> We're always happy to help
