change generate pdf to save as pdf

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
       </section>
     </div>
     <div class="generate-wrapper">
-      <input type="button" value="Generate PDF" onclick="GeneratePdf()" class="btn grey"/>
+      <input type="button" value="Save as PDF" onclick="GeneratePdf()" class="btn grey"/>
     </div>
     </main>
     <div class="private-notes">
