--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
                   </div>
                 </div>
               </div>
-      
+              <!-- <span class="margin-top-page-two w-100"></span> -->
               <input type="radio" name="tabs" id="tab2" />
-              <div class="discover-heading w-100"></div>
-              <label for="tab2" class="tab-heading">Discover</label>
+              <label for="tab2" class="tab-heading">
+                Discover</label>
               <div class="tab">
                 <div class="">
                   <div class="w-100 d-flex justify-between">
